--- a/app/public/Builds/index.html
+++ b/app/public/Builds/index.html
@@ -41,9 +41,9 @@
     }
 
     createUnityInstance(document.querySelector("#unity-canvas"), {
-      dataUrl: "Build/Builds.data.br",
-      frameworkUrl: "Build/Builds.framework.js.br",
-        codeUrl: "Build/Builds.wasm.br",
+      dataUrl: "Build/Builds.data",
+      frameworkUrl: "Build/Builds.framework.js",
+        codeUrl: "Build/Builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
       productName: "SilentWars",
